# knowledgebase

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  fix_ci1.py  fix_ci1.sh  fix_ci1_2.sh  fix_ci2.sh  generate_all.py  kb_prs.json  pyproject.toml  run.sh  submission.patch  test.sh
.fleet/2026_04_14/: issue_tasks.json  issue_tasks.md  sessions.json
.fleet/2026_04_17/: issue_tasks.json  issue_tasks.md
.fleet/2026_04_18/: issue_tasks.json  issue_tasks.md
.fleet/2026_04_27/: issue_tasks.json  issue_tasks.md
.fleet/2026_04_29/: issue_tasks.json  issue_tasks.md
.fleet/2026_04_30/: issue_tasks.json  issue_tasks.md
.github/: copilot-instructions.md
.github/agents/: change-patrol.md  code-reviewer.md  documentation-engineer.md  entity-resolution-and-canonicalization.md  evidence-verifier.md  framework-engineer.md  knowledgebase-orchestrator.md  maintenance-auditor.md  policy-arbiter.md  quality-analyst.md  query-synthesist.md  security-auditor.md  test-engineer.md  (+4 more)
.jules/: bolt.md  sentinel.md
docs/: architecture.md  mvp-runbook.md
schema/: CONTEXT.md  drift-report-contract.md  drive-source-registry-contract.md  github-source-registry-contract.md  governed-artifact-contract.md  ingest-checklist.md  metadata-schema-contract.md  ontology-entity-contract.md  page-template.md  rejection-registry-contract.md  report-artifact-contract.md  taxonomy-contract.md
scripts/: README.md  __init__.py  _optional_surface_common.py
wiki/: CONTEXT.md  index.md  log.md
(+328 files in other folders)
