[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgebase-scripts"
version = "0.1.0"
description = "Knowledgebase management scripts"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
]
drive-monitor = [
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-dir]
"" = "."
